--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -37,15 +37,22 @@
 								<li>신규 추가 서비스 퍼블리싱 및 GUI구현</li>
 								<li>Ajax 데이터 연동 이벤트 구현</li>
 								<li><a href="https://terms.naver.com/entry.nhn?docId=2067169&cid=50305&categoryId=50305" target="_blank">트러블 슈팅(trouble shooting)</a> 및 단위테스트</li>
-								<li>Jenkins 및 ChangeFlow를 통한 형상 배포</li>
+								<li><a href="https://www.jenkins.io/" target="_blank">Jenkins</a> 및 <a href="http://www.softrepublic.co.kr/m05/m05_013.html" target="_blank">ChangeFlow</a>, Git을 통한 형상 배포</li>
 							</ul>
 						</li>
-						<li><em>운영 서비스</em>
+						<li><em>운영 서비스 2.0</em>
 							<ul>
 								<li>핀크계좌 : 무료송금과 하나은행 ATM출금, 캐시백 혜택까지 받는 입출금 통장 서비스</li>
-								<li>소비평가 : 자신이 사용한 영수증으로 하는 소비평가 기능 제공<br /></li>
-								<li>AI핀고분석 : 나의 소비, 소득을 분석하고 알맞은 금융 생활 조언 서비스<br /></li>
+								<li>소비평가 : 자신이 사용한 영수증으로 하는 소비평가 기능 제공</li>
+								<li>AI핀고분석 : 나의 소비, 소득을 분석하고 알맞은 금융 생활 조언 서비스</li>
 								<li>핀크마켓 : 혜택 많은 금융상품과 최고 할인률 기프티콘몰 서비스 제공</li>
+							</ul>
+						</li>
+						<li><em>운영 서비스 3.0</em>
+							<ul>
+								<li>대출 : T통신스코어를 활용하여 자신에게 최적화 된 금리비교, 추천상품을 제공</li>
+								<li>금융상품 : 예적금, 카드, 대출, 투자(p2p, 아트투자), 보험, 생활 속 핀크(해외송금, 기프티콘몰)등 일상속에서 자신에게 꼭 필요한 금융서비스를 제공</li>
+								<li>리얼리 : SNS기반 금융 커뮤니케이션으로 익명(별명)으로 매달 주어지는 챌리저를 도전하고 타인의 금융을 알아보는 서비스</li>
 							</ul>
 						</li>
 						<li><em>성과</em> :
@@ -54,8 +61,10 @@
 								<li>고해상력(High PPI) 디스플레이 대응</li>
 								<li>Android/IOS 앱 오픈</li>
 								<li>1.0에서 2.0/3.0으로 개편하면서 UI/UX 향상</li>
+								<li>오픈뱅킹API 도입으로 은행/증권사 연결 다양화</li>
 								<li>신규 서비스 추가 런칭</li>
 								<li>송금 서비스 전면 개편</li>
+								<li>SNS기반 금융서비스 리얼리런칭</li>
 							</ul>
 						</li>
 					</ul>
