--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@ $(function(){
 	checksubscroll();
 	skillListCardFlip();
 
-    console.log('%c UI Developer %c HEO.D.K ', 'background-color:#222; color:#fff; font-size:23px;',
-            'background-color:red; color:#fff; font-size:23px;');
+    console.log('%c UI Developer %c HEO.D.K \n 열심히 하겠습니다. 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
+            'color:#fff; font-size:22px;');
 });
 </script>
 </html>
