--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
 
 </body>
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="js/vue-2.5.17.min.js"></script>
 <script type="text/javascript" src="js/lottie-player.js"></script>
+<script type="text/javascript" src="js/vue-2.5.17.min.js"></script>
 <script type="text/javascript" src="js/ui.js?date190522_1113"></script>
 <script type="text/javascript" src="js/mainVue.js?date190522_1113"></script>
 <script type="text/javascript">
@@ -428,9 +428,9 @@ $(function(){
 		menuScrollEvt();
 	});
 
-
 	// 포트폴이오 메뉴 리스트 자세히보기 EVENT
-	function portMenuListEvt(){
+	function portMenuListEvt()
+	{
 		$(document).on('mouseenter focusin', '.port__list li', function() {
 			$(this).find('.over').css({ opacity : .8 }).stop().fadeIn(250);
 			$(this).find('.more').stop().animate({ bottom : '50px'}, 350, easing, function() {});
@@ -450,13 +450,14 @@ $(function(){
 	});
 
 	// 화면 스크롤 시 페이지 목록 호출 이벤트
-	function menuScrollEvt(){
-		let _num = 700;
-		let _menu1 = $('.port__list--wrap').offset().top - 500,
-			_menu2 = $('.skill_list').offset().top - 500,
-			_menu3 = $('.work_experience .info__wrap').offset().top - _num,
-			_menu4 = $('.info__about .info__wrap').offset().top - _num,
-			_scrollTop = $(this).scrollTop();
+	function menuScrollEvt()
+	{
+		let _num 		= 700;
+		let _menu1 		= $('.port__list--wrap').offset().top - 500,
+			_menu2 		= $('.skill_list').offset().top - 500,
+			_menu3 		= $('.work_experience .info__wrap').offset().top - _num,
+			_menu4 		= $('.info__about .info__wrap').offset().top - _num,
+			_scrollTop 	= $(this).scrollTop();
 
 		if (_scrollTop >= _menu1) {$('.port__list').addClass('on');}
 		if (_scrollTop >= _menu2) {$('.skill_list').addClass('on');}
@@ -473,21 +474,23 @@ $(function(){
 	}
 
 	// 상단 고정 스크를 Progress
-	function checksubscroll(){
-		window.onscroll = function() {scrollWidth()};
-		function scrollWidth() {
-			let winScroll = document.body.scrollTop || document.documentElement.scrollTop;
-	  		let height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-	  		let scrolled = (winScroll / height) * 100;
+	function checksubscroll()
+	{
+		window.onscroll 	= function() {scrollWidth()};
+		function scrollWidth()
+		{
+			let winScroll 	= document.body.scrollTop || document.documentElement.scrollTop;
+	  		let height 		= document.documentElement.scrollHeight - document.documentElement.clientHeight;
+	  		let scrolled 	= (winScroll / height) * 100;
 	  		document.getElementById("scrollBar").style.width = scrolled + "%";
 		}
 	}
 
 	// Skill List
-	function skillListCardFlip(){
+	function skillListCardFlip()
+	{
 		$('.skill_list li').on('click', function(){
 			let status = $(this).hasClass('on');
-
 			if (status) { $(this).removeClass('on'); }
 			else { $(this).addClass('on').siblings().removeClass('on'); }
 		});
@@ -506,7 +509,7 @@ $(function(){
 	checksubscroll();
 	skillListCardFlip();
 
-    console.log('%c UI Developer %c HEO.D.K \n 열심히 하겠습니다. 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
+    console.log('%c UI Developer %c HEO.D.K \n 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
             'color:#fff; font-size:22px;');
 });
 </script>
