--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
 		<article class="main__visual">
 			<div class="title_wrap">
 				<p class="tit">UI & UX<br> <span>Front End</span> Developer</p>
-				<p class="sub_tit">웹표준 및 웹 접근성 지식으로 사용자에게 보다 좋은 UI를 제공하려고 노력합니다.<br> 개발자 직무 경험을 바탕으로 개발에 용이한 간결한 코드로 작업을 진행하며<br> 디자인팀과 보다 좋은 GUI를 구현하기 위해 소통하며 협업합니다.</p>
+				<!-- <p class="sub_tit">웹표준 및 웹 접근성 지식으로 사용자에게 보다 좋은 UI를 제공하려고 노력합니다.<br> 개발자 직무 경험을 바탕으로 간결하고 효율적인 코드로 작업을 진행하며<br> 보다 좋은 GUI를 구현하기 위해 고민하고 소통하며 협업합니다.</p> -->
+				<div class="typing--txt sub_tit">
+					<ul>
+						<li>웹표준 및 웹 접근성 지식으로 사용자에게 보다 좋은 UI를 제공하려고 노력합니다.</li>
+						<li>개발자 직무 경험을 바탕으로 간결하고 효율적인 코드로 작업을 진행하며</li>
+						<li>보다 좋은 GUI를 구현하기 위해 고민하고 소통하며 협업합니다.</li>
+					</ul>
+				</div>
+				<div class="typing sub_tit">
+					<ul>
+						<li></li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
 			</div>
 			<img src="img/main/bg_main_visual.jpg" alt="">
 
@@ -442,7 +456,7 @@ $(function(){
 		});
 	}
 
-    // layer Close
+	// layer Close
 	$(document).on('click', '.layer_pop .btn_close, .layer_pop .btn_cancel', function () {
 		$('#wrap').css({height : documentH}).removeClass('on');
 			$('.layer_pop').remove();
@@ -480,9 +494,9 @@ $(function(){
 		function scrollWidth()
 		{
 			let winScroll 	= document.body.scrollTop || document.documentElement.scrollTop;
-	  		let height 		= document.documentElement.scrollHeight - document.documentElement.clientHeight;
-	  		let scrolled 	= (winScroll / height) * 100;
-	  		document.getElementById("scrollBar").style.width = scrolled + "%";
+			let height 		= document.documentElement.scrollHeight - document.documentElement.clientHeight;
+			let scrolled 	= (winScroll / height) * 100;
+			document.getElementById("scrollBar").style.width = scrolled + "%";
 		}
 	}
 
@@ -509,8 +523,89 @@ $(function(){
 	checksubscroll();
 	skillListCardFlip();
 
-    console.log('%c UI Developer %c HEO.D.K \n 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
-            'color:#fff; font-size:22px;');
+	console.log('%c UI Developer %c HEO.D.K \n 잘 부탁드립니다.', 'background-color:#222; color:#fff; font-size:23px;',
+			'color:#fff; font-size:22px;');
+
+	function typingAnimate()
+	{
+		var target 		= $(".typing--txt > ul  > li");
+		var typingBool 	= false;
+		var typingIdx	= 0;
+		var liIndex 	= 0;
+		var liLength 	= target.length;
+
+		// 타이핑될 텍스트를 가져온다
+		var typingTxt = target.eq(liIndex).text();
+
+		// liIndex 인덱스로 구분해 한줄씩 가져옴
+		// 한글자씩 잘라 배열로만든다
+		typingTxt = typingTxt.split("");
+
+		// 타이핑이 진행되지 않았다면
+		if(typingBool==false) {
+			typingBool=true;
+			var tyInt = setInterval(typing,100); // 반복동작
+		}
+
+		function typing()
+		{
+		  	$(".typing ul li").removeClass("on");
+		   	$(".typing ul li").eq(liIndex).addClass("on");
+
+		  	//현재 타이핑되는 문장에만 커서 애니메이션을 넣어준다.
+		  	// 타이핑될 텍스트 길이만큼 반복
+		  	if(typingIdx<typingTxt.length)
+		  	{
+			 	$(".typing ul li").eq(liIndex).append(typingTxt[typingIdx]); // 한글자씩 이어준다.
+			 	typingIdx++;
+		   	}
+		   	else
+		   	{
+		   		//한문장이끝나면
+			 	if(liIndex < liLength - 1)
+			 	{
+			 		//다음문장으로  가기위해 인덱스를 1증가
+			   		liIndex++;
+
+			 		//다음문장을 타이핑하기위한 셋팅
+					typingIdx=0;
+					typingBool = false;
+					typingTxt = target.eq(liIndex).text();
+
+			 		//다음문장 타이핑전 1초 쉰다
+				 	clearInterval(tyInt);
+
+				  	//타이핑종료
+				 	setTimeout(function(){
+				   	//1초후에 다시 타이핑 반복 시작
+						tyInt = setInterval(typing,100);
+				 	},1000);
+				}
+				else if(liIndex == liLength - 1)
+				{
+				 	//마지막 문장까지 써지면 반복종료
+				   	clearInterval(tyInt);
+				  	//1초후
+				  	setTimeout(function(){
+						//사용했던 변수 초기화
+						typingBool = false;
+					  	liIndex = 0;
+					  	typingIdx = -0;
+
+						//첫번째 문장으로 셋팅
+				  		typingTxt = target.eq(liIndex).text();
+
+					   //타이핑 결과 모두 지우기
+				  		$(".typing ul li").html("")
+
+						//반복시작
+						tyInt = setInterval(typing,100);
+				  	}, 1000);
+				} // else if
+			}// else
+		} // typing
+	} // typingAnimate
+	typingAnimate();
 });
 </script>
 </html>
